# platform-kuka-ip-simulation

./: README.md
double_lwr_robot/config/: 49939-FRI-Driver.init  double_controllers.yaml
double_lwr_robot/launch/: double_arms.launch
effectors/barrett_hand/barrett_hand_common/barrett_hand_description/urdf/: bh280.urdf.xacro  ip_bh280.gazebo.xacro  ip_bh280.transmission.xacro  ip_bh280.urdf.xacro
effectors/barrett_hand/barrett_hand_controllers/: CMakeLists.txt  barrett_hand_controllers_plugins.xml  package.xml
effectors/barrett_hand/barrett_hand_controllers/include/: barrett_hand_group_position_controller.h
effectors/barrett_hand/barrett_hand_controllers/src/: barrett_hand_group_position_controller.cpp
effectors/barrett_hand/barrett_hand_sim/barrett_hand_gazebo/src/: mimic_plugin.cpp
kuka_lwr_controllers/: CMakeLists.txt  kuka_lwr_controllers_plugins.xml  package.xml
kuka_lwr_controllers/include/: kinematic_chain_controller_base.h  one_task_inverse_kinematics.h  simple_cartesian_impedance_controller.h  torque_based_position.h
kuka_lwr_controllers/include/pid/: pid.h
kuka_lwr_controllers/src/: gravity_compensation_controller.cpp  one_task_inverse_kinematics.cpp  simple_cartesian_impedance_controller.cpp  torque_based_position.cpp
kuka_lwr_controllers/src/pid/: pid.cpp
kuka_lwr_description/model/: kuka_lwr_urdf.xacro  kuka_lwr_utils.xacro  with_intertial_kuka_lwr_urdf.xacro
kuka_lwr_gazebo_plugin/: CMakeLists.txt
kuka_lwr_gazebo_plugin/src/: lwr_gazebo_plugin.cpp
kuka_lwr_hw/: CMakeLists.txt
kuka_lwr_hw/include/kuka_lwr_hw/: lwr_hw.h
kuka_lwr_hw/src/: lwr_hw.cpp  lwr_hw_gazebo.cpp
pantilt_description/model/: pantilt_gazebo.urdf.xacro
platform_gazebo/config/: lbh_controller_gazebo.yaml  lbh_joint_state_controller.yaml  lkuka_controller_gazebo.yaml  lkuka_hw_interface.yaml  rbh_controller_gazebo.yaml  rbh_joint_state_controller.yaml  rkuka_controller_gazebo.yaml  rkuka_hw_interface.yaml
platform_gazebo/launch/: platform_gazebo.launch  platform_gazebo_with_hands.launch
platform_gazebo/robot/: lbh_barrett_hand.urdf.xacro  platform_robot_with_hands.urdf.xacro  rbh_barrett_hand.urdf.xacro
platform_gazebo/worlds/: table_coke_environment.world
platform_rviz/launch/: platform_rviz.launch
txt/: platform_simulations_readme.txt
